.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Third_Party_Detail__c.object
<CustomObject>
    <description>Captures the data relating to individual employee records from hmrc</description>
    <fields>
        <fullName>xcdhcm__Current_tax_code__c</fullName>
        <label>Current tax code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Effective_date__c</fullName>
        <label>Effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <formula>xcdhcm__Fore_name__c  + &quot; &quot; + xcdhcm__Surname__c</formula>
        <label>Employee name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Third Party Detail</relationshipLabel>
        <relationshipName>Third_Party_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Fore_name__c</fullName>
        <label>Forename</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__National_insurance_number__c</fullName>
        <label>National insurance number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__New_tax_code__c</fullName>
        <label>New tax code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Postgraduate_Loan_Y_N__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Postgraduate Loan Y/N</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Postgraduate_plan__c</fullName>
        <label>Postgraduate plan</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actioned</fullName>
                </value>
                <value>
                    <fullName>Match</fullName>
                    <default>true</default>
                    <label>Match</label>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>No match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Student_loan_Y_N__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student loan Y/N</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Student_plan__c</fullName>
        <label>Student plan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Surname__c</fullName>
        <label>Surname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_basis__c</fullName>
        <label>Tax basis</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_paid_YTD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Tax paid YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Taxable__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Taxable YTD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Third_Party_Summary__c</fullName>
        <label>Third Party Summary</label>
        <referenceTo>xcdhcm__Third_Party_Summary__c</referenceTo>
        <relationshipLabel>Third Party Detail</relationshipLabel>
        <relationshipName>Third_Party_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Works_number__c</fullName>
        <label>Works number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Third Party Detail</label>
    <nameField>
        <displayFormat>HMRC-{0000}</displayFormat>
        <label>Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Detail</pluralLabel>
    <recordTypes>
        <fullName>xcdhcm__HMRC</fullName>
        <active>true</active>
        <label>HMRC</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>